--- a/frontend/src/pages/Dashboard/button.css
+++ b/frontend/src/pages/Dashboard/button.css
@@ -1,9 +1,9 @@
 /* cor quando passa o mouse por cima */
 .MuiButtonBase-root.buttonHover:hover {
-    background: #0050ff
+    background: rgb(36, 36, 36)
   }
   
   /* cor enquanto não passa o mouse */
   .MuiButtonBase-root.buttonHover {
-    background: #0050ff
+    background: rgb(71, 71, 71)
   }
