alterar cor input

--- a/frontend/src/pages/Login/style.css
+++ b/frontend/src/pages/Login/style.css
@@ -103,7 +103,7 @@ form{
 	bottom: -2px;
 	width: 0%;
 	height: 2px;
-	background-color: #38d39f;
+	background-color: #4d85ff;
 	transition: .4s;
 }
 
@@ -125,7 +125,7 @@ form{
 }
 
 .input-div.focus > .i > i{
-	color: #38d39f;
+	color: #4d85ff;
 }
 
 .input-div > div > input{
